[package]
name = "test-ipc-chanenl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipc-channel = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

[[bin]]
name = "server"

[[bin]]
name = "client"